# allem

./: .allemrc.json  .gitignore  .mcp.json  ALLEM_PLAN.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/allem-cli/: Cargo.toml
crates/allem-cli/src/: main.rs
crates/allem-core/: Cargo.toml
crates/allem-core/src/: adapter.rs  config.rs  error.rs  finding.rs  lib.rs  report.rs  triage.rs
crates/allem-deps/: Cargo.toml
crates/allem-deps/src/: cargo.rs  danger.rs  fix.rs  lib.rs  model.rs  osv.rs  outdated.rs  python.rs
crates/allem-engine/: Cargo.toml
crates/allem-engine/src/: lib.rs
crates/allem-lang/: Cargo.toml
crates/allem-lang/src/: analysis.rs  cobol.rs  deadcode.rs  duplication.rs  lib.rs  natural.rs  specs.rs  sql.rs  walk.rs
crates/allem-mcp/: Cargo.toml
crates/allem-mcp/src/: lib.rs  tools.rs
npm/: README.md  package.json
npm/scripts/: download.js
