[package]
name = "allem-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency intelligence for Allem — manifest parsing, outdated/vulnerable/dangerous checks."

[dependencies]
allem-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
ureq = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true
